--- a/Consultancy Agency Websites/index.html
+++ b/Consultancy Agency Websites/index.html
@@ -208,7 +208,7 @@
           <div class="row-fluid">
             <div class="span3">
               <div class="lt logo">
-                <a href="#"><img src="images/logo.png" alt="" /></a>
+                <a href="#"><img src="images/logo.png" alt="logo" /></a>
               </div>
             </div>
 
@@ -789,17 +789,17 @@
           <div class="span4 quickLinks">
             <h4>QUICK Links</h4>
             <ul>
-              <li><a href="#">Jobs in UAE</a></li>
+              <li><a href="#">Jobs in Kerala</a></li>
               <li>
-                <a href="#">Jobs in Abu Dhabi</a>
+                <a href="#">Jobs in Trivandrum</a>
               </li>
               <li>
-                <a href="#">Jobs in Dubai</a>
+                <a href="#">Jobs in Cochin</a>
               </li>
               <li>
-                <a href="#">Jobs in Sharjah</a>
+                <a href="#">Jobs in Pathanamthitta</a>
               </li>
-              <li><a href="#">Jobs for UAE Nationals</a></li>
+              <li><a href="#">Jobs for Kannur</a></li>
               <li>
                 <a href="#">Accounting Jobs</a>
               </li>
@@ -834,19 +834,19 @@
             <div class="clearfix"></div>
           </div>
 
-          <div class="span2 nadiaRecruitment">
-            <h4>GCC Recruitment</h4>
-            <!--<ul>
+          <!-- <div class="span2 nadiaRecruitment">
+            <h4>GCC Recruitment</h4> -->
+          <!--<ul>
 <li><a href="../index.cfm">Home </a></li>
 <li><a href="../jobs/">Job Updates</a></li>-->
-            <!--<li><a href="../employer/">Employer Services</a></li>-->
-            <!--<li><a href="../expert/">Expert Advise</a></li>
+          <!--<li><a href="../employer/">Employer Services</a></li>-->
+          <!--<li><a href="../expert/">Expert Advise</a></li>
 <li><a href="../terms/">Terms and Conditions</a></li>-->
-            <!--<li><a href="../training/">Training Course</a></li>-->
-            <!--<li><a href="#">Contact us</a></li>
+          <!--<li><a href="../training/">Training Course</a></li>-->
+          <!--<li><a href="#">Contact us</a></li>
 <li><a href="../employer/">Join Our Team</a></li>
 </ul>-->
-            <ul>
+          <!-- <ul>
               <li>
                 <a href="#">Jobs in Saudi Arabia</a>
               </li>
@@ -871,9 +871,9 @@
             </ul>
 
             <div class="clear"></div>
-          </div>
-          <div class="span6">
-            <div class="newsLetter">
+          </div> -->
+          <div class="span8">
+            <!-- <div class="newsLetter">
               <ul>
                 <li>
                   <input
@@ -887,8 +887,8 @@
                   <a href="#">Register for Job Updates</a>
                 </li>
               </ul>
-            </div>
-            <div class="clear"></div>
+            </div> -->
+            <!-- <div class="clear"></div> -->
 
             <div class="row-fluid contactusQuick">
               <div class="span4">
@@ -902,12 +902,12 @@
 
                 <ul>
                   <li>
-                    <a href="#"
+                    <a href="tel:919961941070"
                       ><i class="fa fa-phone-square"></i> +91 9961 9410 70
                     </a>
                   </li>
-                  <li>
-                    <a href="#"
+                  <li class=" offset1">
+                    <a href="tel:918281900105"
                       ><i class="fa fa-phone-square"></i>+91 8281 9001 05</a
                     >
                   </li>
@@ -972,7 +972,9 @@ Al Nad, Al Qasimiyah</p>
               <li><a href="#"> Contact </a></li>
               <li><a href="#"> Terms and Conditions </a></li>
               <li><a href="#"> Privacy Policy</a></li>
-              <li><a style="border-right: none;" href="#">Recruitment Fraud</a></li>
+              <li>
+                <a style="border-right: none" href="#">Recruitment Fraud</a>
+              </li>
             </ul>
           </div>
         </div>
