--- a/Consultancy Agency Websites/index.html
+++ b/Consultancy Agency Websites/index.html
@@ -906,7 +906,7 @@
                       ><i class="fa fa-phone-square"></i> +91 9961 9410 70
                     </a>
                   </li>
-                  <li class=" offset1">
+                  <li class=" offset1 hidden-desktop">
                     <a href="tel:918281900105"
                       ><i class="fa fa-phone-square"></i>+91 8281 9001 05</a
                     >
