--- a/Consultancy Agency Websites/index.html
+++ b/Consultancy Agency Websites/index.html
@@ -40,7 +40,7 @@
 
     <meta name="twitter:image:src" content="images/favicon.png" /> -->
 
-    <!--<meta property="og:title" content="NADIA Recruitment Agency in Dubai, Abu Dhabi, Sharjah, UAE" />-->
+    <!--<meta property="og:title" content="Kerala's #1 Executive Search Firm | OMR Placements" />-->
     <meta
       property="og:title"
       content="Kerala's #1 Executive Search Firm | OMR Placements"
@@ -76,7 +76,7 @@
 
     <!-- <meta property="fb:admins" content="148758265258899" /> -->
 
-    <!--<title>NADIA Recruitment Agency in Dubai, Abu Dhabi, Sharjah, UAE</title>-->
+    <!--<title>Omr Placements - Best Job Consultants in Trivandrum</title>-->
     <title>Omr Placements - Best Job Consultants in Trivandrum</title>
 
     <script
@@ -906,7 +906,7 @@
                       ><i class="fa fa-phone-square"></i> +91 9961 9410 70
                     </a>
                   </li>
-                  <li class=" offset1 hidden-desktop">
+                  <li class="offset1 hidden-desktop">
                     <a href="tel:918281900105"
                       ><i class="fa fa-phone-square"></i>+91 8281 9001 05</a
                     >
