--- a/Furniture_Websites/template-4/index.html
+++ b/Furniture_Websites/template-4/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Helendo Furniture eCommerce HTML Template</title>
-    <meta name="description" content="" />
+    <title>Travancore Furniture - Explore Great Home Decors</title>
+    <meta name="description" content="Wide variety of Home Decors available at your fingertips. Come Now!!!" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicon -->
     <link rel="icon" href="assets/images/logo/T.png" />
