--- a/Beauty_Salon_Website/index.html
+++ b/Beauty_Salon_Website/index.html
@@ -463,7 +463,8 @@
                                             <h2
                                               class="lsvr-slide-list__item-title"
                                             >
-                                              Welcome to <br> Vicky He & she Beauty Clinic
+                                              Welcome to <br />
+                                              Vicky He & she Beauty Clinic
                                             </h2>
 
                                             <div
@@ -1735,14 +1736,13 @@
                 <nav class="footer-menu">
                   <ul class="footer-menu__list">
                     <li class="footer-menu__item">
-                      <a href="index.html">Home</a>
+                      <a href="#"><i class="fab fa-facebook"></i></a>
                     </li>
 
                     <li class="footer-menu__item">
                       <a
-                        href="https://themeforest.net/item/beautyspot-html-template-for-beauty-salons/7734629"
-                        target="_blank"
-                        >Purchase</a
+                        href="#"
+                        ><i class="fab fa-instagram"></i></a
                       >
                     </li>
 
@@ -1750,16 +1750,16 @@
                       <a
                         href="http://docs.lsvr.sk/beautyspot.html/"
                         target="_blank"
-                        >Documentation</a
+                        ><i class="fab fa-google-plus-g"></i></a
                       >
                     </li>
 
                     <li class="footer-menu__item">
-                      <a href="demo-credits.html">Demo Credits</a>
+                      <a href="demo-credits.html"><i class="fab fa-linkedin-in"></i></a>
                     </li>
 
                     <li class="footer-menu__item">
-                      <a href="../beautyspot.rtl/index.html">RTL Version</a>
+                      <a href="../beautyspot.rtl/index.html"><i class="fab fa-pinterest-p"></i></a>
                     </li>
                   </ul>
                 </nav>
