--- a/Beauty_Salon_Website/index.html
+++ b/Beauty_Salon_Website/index.html
@@ -45,11 +45,7 @@
                 </li>
 
                 <li class="header-languages__item">
-                  <a href="#de" class="header-languages__item-link">DE</a>
-                </li>
-
-                <li class="header-languages__item">
-                  <a href="#es" class="header-languages__item-link">ES</a>
+                  <a href="#de" class="header-languages__item-link">HI</a>
                 </li>
               </ul>
 
@@ -86,7 +82,7 @@
                 <div class="header-title-tagline">
                   <div class="header-title">
                     <a href="index.html" class="header-title__link"
-                      >Vicky He & she Beauty Clinic</a
+                      >Vicky He & She Beauty Clinic</a
                     >
                   </div>
                 </div>
@@ -135,7 +131,7 @@
                 <!-- MENU ITEM : begin -->
                 <li class="header-menu__item header-menu__item--has-children">
                   <span class="header-menu__item-link-wrapper">
-                    <a href="blog-archive.html" class="header-menu__item-link"
+                    <a href="gallery-archive.html" class="header-menu__item-link"
                       >About Us</a
                     >
                   </span>
@@ -155,8 +151,8 @@
                 <!-- MENU ITEM : begin -->
                 <li class="header-menu__item header-menu__item--has-children">
                   <span class="header-menu__item-link-wrapper">
-                    <a href="typography.html" class="header-menu__item-link"
-                      >More</a
+                    <a href="blog-archive.html" class="header-menu__item-link"
+                      >Blog</a
                     >
                   </span>
                 </li>
@@ -464,7 +460,7 @@
                                               class="lsvr-slide-list__item-title"
                                             >
                                               Welcome to <br />
-                                              Vicky He & she Beauty Clinic
+                                              Vicky He & She Beauty Clinic
                                             </h2>
 
                                             <div
@@ -1663,11 +1659,11 @@
                     <div class="widget lsvr-text-widget">
                       <div class="widget__inner">
                         <h3 class="widget__title">
-                          About Vicky He & she Beauty Clinic
+                          About Vicky He & She Beauty Clinic
                         </h3>
                         <div class="widget__content">
                           <p>
-                            Vicky He & she Beauty Clinic is an ideal HTML
+                            Vicky He & She Beauty Clinic is an ideal HTML
                             template for beauty salons, hairdressers, wellness
                             or spa websites. Clean and fast code is wrapped in
                             unique design.
@@ -1740,26 +1736,19 @@
                     </li>
 
                     <li class="footer-menu__item">
-                      <a
-                        href="#"
-                        ><i class="fab fa-instagram"></i></a
-                      >
+                      <a href="#"><i class="fab fa-instagram"></i></a>
                     </li>
 
                     <li class="footer-menu__item">
-                      <a
-                        href="http://docs.lsvr.sk/beautyspot.html/"
-                        target="_blank"
-                        ><i class="fab fa-google-plus-g"></i></a
-                      >
+                      <a href="#"><i class="fab fa-google-plus-g"></i></a>
                     </li>
 
                     <li class="footer-menu__item">
-                      <a href="demo-credits.html"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </li>
 
                     <li class="footer-menu__item">
-                      <a href="../beautyspot.rtl/index.html"><i class="fab fa-pinterest-p"></i></a>
+                      <a href="#"><i class="fab fa-pinterest-p"></i></a>
                     </li>
                   </ul>
                 </nav>
@@ -1768,7 +1757,7 @@
                 <!-- FOOTER TEXT : begin -->
                 <div class="footer-text">
                   <p>
-                    <a href="index.html">Vicky He & she Beauty Clinic</a>
+                    <a href="index.html">Vicky He & She Beauty Clinic</a>
                     - Designed by <strong>Keffect Digital Marketing</strong>
                   </p>
                 </div>
