--- a/Beauty_Salon_Website/index.html
+++ b/Beauty_Salon_Website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | BeautySpot - HTML Template for Beauty Salons</title>
+    <title>Home | Vicky He & She Beauty Clinic</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
 
     <!-- STYLESHEETS : begin -->
@@ -131,7 +131,9 @@
                 <!-- MENU ITEM : begin -->
                 <li class="header-menu__item header-menu__item--has-children">
                   <span class="header-menu__item-link-wrapper">
-                    <a href="gallery-archive.html" class="header-menu__item-link"
+                    <a
+                      href="gallery-archive.html"
+                      class="header-menu__item-link"
                       >About Us</a
                     >
                   </span>
@@ -1663,10 +1665,11 @@
                         </h3>
                         <div class="widget__content">
                           <p>
-                            Vicky He & She Beauty Clinic is an ideal HTML
-                            template for beauty salons, hairdressers, wellness
-                            or spa websites. Clean and fast code is wrapped in
-                            unique design.
+                            Vicky He & She Beauty Clinic is an exceptional
+                            Beauty Clininc. The services we provide are second
+                            to none. We use natural organic products and we care
+                            what our customers want above all. <br />
+                            <strong>The customerrs are always right!</strong>
                           </p>
                         </div>
                       </div>
