--- a/AuSa/template-1/blog.html
+++ b/AuSa/template-1/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Blog Page || Conexi || Responsive HTML 5 Template</title>
+    <title>Blog || AuSa</title>
     <link
       rel="apple-touch-icon"
       sizes="57x57"
